added unit tests for thr cvapp and updated database settings

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -76,7 +76,7 @@ ul {
 }
 
 .site-header .navbar-nav .nav-link {
-    color: #87a5b5;
+    color: #c5c9cb;
 }
 
 .site-header .navbar-nav .nav-link:hover {
